aligntment fixes

--- a/src/features/process-invoice/process-invoice.module.scss
+++ b/src/features/process-invoice/process-invoice.module.scss
@@ -6,7 +6,7 @@
   grid-template-columns: 1fr 1fr;
   margin-top: 50px;
   line-height: 50px;
-  margin-left: 18px;
+  margin-left: 5px;
   :nth-child(even) {
     padding-left: 10px;
   }
@@ -14,6 +14,7 @@
 
   div{
     border-bottom: 1px solid lightgray;
+    padding-left: 10px;
   }
  
 }
@@ -33,6 +34,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 28px;
+  margin-top: 10px;
 }
 
 .processInvoiceModalDialogContainer{
